--- a/lang/tcl/configure.in
+++ b/lang/tcl/configure.in
@@ -73,7 +73,7 @@ int main()
 {
     exit(strstr("\0test", "test") ? 1 : 0);
 }
-],  , [LIBOBJS="$LIBOBJS strstr.o"])
+],  , [LIBOBJS="$LIBOBJS strstr.o"; LIBSOBJS="$LIBSOBJS strstr.so"])
 
 #--------------------------------------------------------------------
 #	Check for strtoul function.  This is tricky because under some
@@ -97,6 +97,7 @@ int main()
 }], , tcl_ok=0)
 if test $tcl_ok = 0; then
     LIBOBJS="$LIBOBJS strtoul.o"
+    LIBSOBJS="$LIBSOBJS strtoul.so"
 fi
 
 #--------------------------------------------------------------------
@@ -120,6 +121,7 @@ int main()
 }], , tcl_ok=0)
 if test $tcl_ok = 0; then
     LIBOBJS="$LIBOBJS strtod.o"
+    LIBSOBJS="$LIBSOBJS strtod.so"
 fi
 
 #--------------------------------------------------------------------
@@ -177,6 +179,6 @@ AC_COMPILE_CHECK([matherr support], [#include <math.h>], [
 struct exception x;
 x.type = DOMAIN;
 x.type = SING;
-], [LIBOBJS="$LIBOBJS tclMtherr.o"; AC_DEFINE(NEED_MATHERR)])
+], [LIBOBJS="$LIBOBJS tclMtherr.o"; LIBSOBJS="$LIBSOBJS tclMtherr.so"; AC_DEFINE(NEED_MATHERR)])
 
 AC_OUTPUT(Makefile)
