Fixed bogus install program specification, doc install target.

--- a/x11/tk/Makefile
+++ b/x11/tk/Makefile
@@ -110,7 +110,7 @@ SHELL =		/bin/sh
 #----------------------------------------------------------------
 
 AC_FLAGS =		 -DHAVE_UNISTD_H=1
-INSTALL =		/usr/local/bin/install -c
+INSTALL =		/usr/bin/install -c
 INSTALL_PROGRAM =	$(INSTALL)
 INSTALL_DATA =		$(INSTALL) -m 644
 RANLIB =		ranlib
@@ -269,7 +269,7 @@ install-man:
 		else true; \
 		fi; \
 	    done;
-	@cd $(SRC_DIR)/doc; for i in *.1; \
+	@cd $(SRC_DIR)/doc; for i in *.[31n]; \
 	    do \
 	    echo "Installing doc/$$i"; \
 	    rm -f $(MAN1_DIR)/$$i; \
