--- a/mail/elm/Makefile
+++ b/mail/elm/Makefile
@@ -1,5 +1,5 @@
 #
-# : Makefile.SH,v 5.3 1993/04/21 01:53:10 syd Exp $
+# : Makefile.SH,v 1.3 1993/10/09 19:36:02 smace Exp $
 #
 #  Makefile for the entire ELM mail system
 #
@@ -7,8 +7,12 @@
 #         (C) Copyright 1988-1992, USENET Community Trust
 #
 #  $Log: Makefile,v $
-#  Revision 1.6  1993/10/09 19:36:01  smace
-#  Update to elm 2.4 pl23 release version
+#  Revision 1.7  1993/12/28 03:40:40  smace
+#  added elm_src.tgz target (we don't make elm binaries yet)
+#  added elm-src-desc and elm-src-list files for pkg_create
+#
+# Revision 1.3  1993/10/09  19:36:02  smace
+# Update to elm 2.4 pl23 release version
 #
 # Revision 5.3  1993/04/21  01:53:10  syd
 # take out parallelism, effects standard make
@@ -108,4 +112,9 @@ utils: _utils
 
 _utils:
 	cd utils; $(MAKE) $(MJ) -$(MAKEFLAGS) all
+
+elm_src.tgz: clean
+	(cd ..; pkg_create -v -c $(.CURDIR)/elm-src-desc -d $(.CURDIR)/README -f $(.CURDIR)/elm-src-list elm_src.tgz)
+	mv ../elm_src.tgz .
+
 
