corrected pkg targets and added necessary datafiles

--- a/x11/jpeg/Makefile
+++ b/x11/jpeg/Makefile
@@ -122,13 +122,14 @@ install: all
 	install -c  -m 444 -o bin -g bin cjpeg.1 /usr/local/man/man1
 	install -c  -m 444 -o bin -g bin djpeg.1 /usr/local/man/man1
 
-jpeg_bin.tgz:
-	(cd /usr/local/bin; pkg_create -v -c $(.CURDIR)/jpeg-bin-desc -d $(.CURDIR)/README -f $(.CURDIR)/jpeg-bin-list jpeg_bin.tgz)
-	mv /usr/local/bin/jpeg_bin.tgz .
 
-jpeg_src.tgz:   clean
-	(cd ..; pkg_create -v -c $(.CURDIR)/jpeg-src-desc -d $(.CURDIR)/README -f $(.CURDIR)/jpeg-src-list jpeg_src.tgz)
-	mv ../jpeg_src.tgz .
+pkg:	pkg_src pkg_bin
+
+pkg_src: +DESC_S +ONELINE_S +PLIST_S +REQ_S
+	pkg_create -c +ONELINE_S -d +DESC_S -f +PLIST_S -r +REQ_S jpeg_src
+
+pkg_bin: +DESC_B +ONELINE_B +PLIST_B +REQ_B
+	pkg_create -c +ONELINE_B -d +DESC_B -f +PLIST_B -r +REQ_B jpeg_bin
 
 jbsmooth.o : jbsmooth.c jinclude.h jconfig.h jpegdata.h 
 jcarith.o : jcarith.c jinclude.h jconfig.h jpegdata.h 
