--- a/mail/elm/filter/Makefile
+++ b/mail/elm/filter/Makefile
@@ -1,5 +1,5 @@
 #
-# @(#): Makefile.SH,v 5.5 1993/06/06 17:35:04 syd Exp $
+# @(#): Makefile.SH,v 1.3 1993/10/09 19:36:54 smace Exp $
 #  Makefile for the Elm system filter program
 #
 #         (C) Copyright 1986,1987, by Dave Taylor
@@ -11,8 +11,11 @@
 #			dsinc!elm
 #
 #  $Log: Makefile,v $
-#  Revision 1.6  1993/10/09 19:36:53  smace
-#  Update to elm 2.4 pl23 release version
+#  Revision 1.7  1993/12/28 05:34:33  smace
+#  Reran configure to get new Makefile.SH to corretnly substitute variables
+#
+# Revision 1.3  1993/10/09  19:36:54  smace
+# Update to elm 2.4 pl23 release version
 #
 # Revision 5.5  1993/06/06  17:35:04  syd
 # Remove useless buffer.c
