--- a/mail/elm/utils/Makefile
+++ b/mail/elm/utils/Makefile
@@ -1,5 +1,5 @@
 
-# @(#): Makefile.SH,v 5.5 1993/05/31 19:17:28 syd Exp $
+# @(#): Makefile.SH,v 1.3 1993/10/09 19:40:53 smace Exp $
 #
 #  Makefile for the Elm system utilities
 #
@@ -12,7 +12,10 @@
 #			dsinc!elm
 #
 # $Log: Makefile,v $
-# Revision 1.6  1993/10/09 19:40:52  smace
+# Revision 1.7  1993/12/28 05:35:08  smace
+# Reran configure to get new Makefile.SH to corretnly substitute variables
+#
+# Revision 1.3  1993/10/09  19:40:53  smace
 # Update to elm 2.4 pl23 release version
 #
 # Revision 5.5  1993/05/31  19:17:28  syd
