Moved packaging files - they looked too ugly cluttering up the top level, so I decided to bit the bullet now and change them - they're moved into a subdir and it looks much nicer..

--- a/net/zircon/Makefile
+++ b/net/zircon/Makefile
@@ -91,8 +91,8 @@ tar:	tclIndex
 
 pkg:	pkg_src pkg_bin
 
-pkg_src: +DESC_S +ONELINE_S +PLIST_S +REQ_S
-	pkg_create -c +ONELINE_S -d +DESC_S -f +PLIST_S -r +REQ_S zircon_src
+pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S pkg/+REQ_S
+	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S -r pkg/+REQ_S zircon_src
 
-pkg_bin: +DESC_B +ONELINE_B +PLIST_B +REQ_B
-	pkg_create -c +ONELINE_B -d +DESC_B -f +PLIST_B -r +REQ_B zircon_bin
+pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B pkg/+REQ_B
+	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B -r pkg/+REQ_B zircon_bin
