--- a/comm/kermit/Makefile
+++ b/comm/kermit/Makefile
@@ -33,10 +33,10 @@ CLEANFILES+= ckcpro.c wart
 
 pkg:	pkg_src pkg_bin
 
-pkg_src: +DESC_S +ONELINE_S +PLIST_S +REQ_S
-	pkg_create -c +ONELINE_S -d +DESC_S -f +PLIST_S -r +REQ_S kermit_src
+pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
+	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S kermit_src
 
-pkg_bin: +DESC_B +ONELINE_B +PLIST_B +REQ_B
-	pkg_create -c +ONELINE_B -d +DESC_B -f +PLIST_B -r +REQ_B kermit_bin
+pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
+	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B kermit_bin
 
 .include <bsd.prog.mk>
