--- a/x11/tk/Makefile.in
+++ b/x11/tk/Makefile.in
@@ -302,6 +302,14 @@ clean:
 distclean: clean
 	rm -f Makefile config.status
 
+pkg:	pkg_src pkg_bin
+
+pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S pkg/+REQ_S
+	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S -r pkg/+REQ_S tk_src
+
+pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B pkg/+REQ_B
+	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B -r pkg/+REQ_B tk_bin
+
 .c.o:
 	$(CC) -c $(CC_SWITCHES) $<
 
