Added clean dependency for the pkg_src target

--- a/x11/jpeg/Makefile
+++ b/x11/jpeg/Makefile
@@ -125,7 +125,7 @@ install: all
 
 pkg:	pkg_src pkg_bin
 
-pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
+pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S jpeg_src
 
 pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
