--- a/net/tcl-dp/Makefile.in
+++ b/net/tcl-dp/Makefile.in
@@ -1,4 +1,3 @@
-# Generated automatically from Makefile.in by configure.
 #
 # This file is a Makefile for Tcl-DP.  If it has the name "Makefile.in"
 # then it is a template for a Makefile;  to generate the actual Makefile,
@@ -51,14 +50,14 @@ MAN3_DIR =	$(MAN_DIR)/man3
 MANN_DIR =	$(MAN_DIR)/mann
 
 # The directory containing the Tcl sources and headers appropriate
-# for this version of Tcl-DP ("." will be replaced or has already
+# for this version of Tcl-DP ("@srcdir@" will be replaced or has already
 # been replaced by the configure script):
-TCL_DIR =	./../tcl
+TCL_DIR =	@srcdir@/../tcl
 
 # The directory containing the Tk sources and headers appropriate
-# for this version of Tcl-DP ("." will be replaced or has already
+# for this version of Tcl-DP ("@srcdir@" will be replaced or has already
 # been replaced by the configure script):
-TK_DIR =	./../tk
+TK_DIR =	@srcdir@/../tk
 
 # The directory containing the Tcl library archive file appropriate
 # for this version of Tcl-DP:
@@ -74,18 +73,18 @@ TK_BIN_DIR =	$(LIB_DIR)
 # X11 include files accessible (the configure script will try to
 # set this value, and will cause it to be an empty string if the
 # include files are accessible via /usr/include).
-X11_INCLUDES =   -I/usr/X386/include
+X11_INCLUDES =  @XINCLUDES@
 
 # Linker switch(es) to use to link with the X11 library archive (the
 # configure script will try to set this value automatically, but you
 # can override it).
-X11_LIB_SWITCHES =	-L/usr/X386/lib -lX11
+X11_LIB_SWITCHES =	@XLIBSW@
 
 # Libraries to use when linking:  must include at least Tcl-DP, Tk, Tcl,
-# Xlib, and the math library (in that order).  The "" part will be
+# Xlib, and the math library (in that order).  The "@LIBS@" part will be
 # replaced (or has already been replaced) with relevant libraries as
 # determined by the configure script.
-LIBS = libdpnetwork.a -L$(TK_BIN_DIR) -ltk -L$(TCL_BIN_DIR) -ltcl $(X11_LIB_SWITCHES)  -lm
+LIBS = libdpnetwork.a -L$(TK_BIN_DIR) -ltk -L$(TCL_BIN_DIR) -ltcl $(X11_LIB_SWITCHES) @LIBS@ -lm
 
 # To change the compiler switches, for example to change from -O
 # to -g, change the following line:
@@ -119,13 +118,13 @@ SHELL =		/bin/sh
 # modify any of this stuff by hand.
 #----------------------------------------------------------------
 
-AC_FLAGS =		 -DHAVE_STDLIB_H=1 -DHAVE_UNISTD_H=1
-INSTALL =		/usr/bin/install -c
-INSTALL_PROGRAM =	$(INSTALL)
-INSTALL_DATA =		$(INSTALL) -m 644
-RANLIB =		ranlib
-SRC_DIR =		.
-VPATH =			.
+AC_FLAGS =		@DEFS@
+INSTALL =		@INSTALL@
+INSTALL_PROGRAM =	@INSTALL_PROGRAM@
+INSTALL_DATA =		@INSTALL_DATA@
+RANLIB =		@RANLIB@
+SRC_DIR =		@srcdir@
+VPATH =			@srcdir@
 
 #----------------------------------------------------------------
 # The information below should be usable as is.  The configure
@@ -134,7 +133,7 @@ VPATH =			.
 #----------------------------------------------------------------
 
 
-CC =		cc
+CC =		@CC@
 CC_SWITCHES =	${CFLAGS} -I${SRC_DIR} -I${TCL_DIR} -I${TK_DIR} \
 ${AC_FLAGS} ${PROTO_FLAGS} ${MEM_DEBUG_FLAGS} \
 -DDP_LIBRARY=\"${DP_LIBRARY}\" ${X11_INCLUDES} ${HP_ANSI_FLAGS}
