--- a/shell/ksh.old/Makefile
+++ b/shell/ksh.old/Makefile
@@ -57,10 +57,10 @@ clean:
 cleandir:	clean
 
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin pkg_src
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S ksh_src
 
-pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
+pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
 	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B ksh_bin
