--- a/x11/xv/Makefile
+++ b/x11/xv/Makefile
@@ -258,12 +258,12 @@ tar:
 
 
 
-pkg:	pkg_src pkg_bin
+pkg:	pkg_bin pkg_src
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S xv_src
 
-pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
+pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B
 	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B xv_bin
 
 $(OBJS):   xv.h
