--- a/devel/gdb/etc/Makefile
+++ b/devel/gdb/etc/Makefile
@@ -1,27 +1,27 @@
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = 
-host_alias = i386--386bsd
+host_alias = i386--netbsd
 host_cpu = i386
 host_vendor = 
-host_os = bsd
-host_canonical = i386--bsd
-target_alias = i386--386bsd
+host_os = netbsd
+host_canonical = i386--netbsd
+target_alias = i386--netbsd
 target_cpu = i386
 target_vendor = 
-target_os = bsd
-target_canonical = i386--bsd
+target_os = netbsd
+target_canonical = i386--netbsd
 # 
 # Makefile.in for etc
 #
 
-prefix = /usr/gnu
+prefix = /usr/local
 exec_prefix = $(prefix)
 
 srcdir = .
 bindir  = $(exec_prefix)/bin
 libdir  = $(exec_prefix)/lib
-tooldir = $(exec_prefix)/i386--386bsd
+tooldir = $(exec_prefix)/i386--netbsd
 datadir = $(prefix)/lib
 
 mandir  = $(prefix)/man
