--- a/devel/gdb/opcodes/Makefile
+++ b/devel/gdb/opcodes/Makefile
@@ -2,17 +2,17 @@ BFD_MACHINES =  i386-dis.o
 # This file was generated automatically by configure.  Do not edit.
 VPATH = .
 links = sysdep.h
-host_alias = i386--386bsd
+host_alias = i386--netbsd
 host_cpu = i386
 host_vendor = 
-host_os = bsd
-host_canonical = i386--bsd
-target_alias = i386--386bsd
+host_os = netbsd
+host_canonical = i386--netbsd
+target_alias = i386--netbsd
 target_cpu = i386
 target_vendor = 
-target_os = bsd
-target_canonical = i386--bsd
-target_makefile_frag = ./../bfd/config/i386-bsd.mt
+target_os = netbsd
+target_canonical = i386--netbsd
+target_makefile_frag = ./../bfd/config/i386-netbsd.mt
 host_makefile_frag = ../bfd/config/i386bsd.mh
 #    Makefile template for Configure for the opcodes library.
 #    Copyright (C) 1990, 1991, 1992 Free Software Foundation, Inc.
@@ -34,7 +34,7 @@ host_makefile_frag = ../bfd/config/i386bsd.mh
 
 srcdir = .
 
-prefix = /usr/gnu
+prefix = /usr/local
 
 exec_prefix = $(prefix)
 bindir = $(exec_prefix)/bin
@@ -89,9 +89,9 @@ ALL_MACHINES = a29k-dis.o alpha-dis.o h8300-dis.o h8500-dis.o \
 OFILES = $(BFD_MACHINES) dis-buf.o
 
 #### host and target dependent Makefile fragments come in here.
-# Target:  Intel 386 running bsd, using a.out
+# Target:  Intel 386 running netbsd, using (modified) a.out
 
-DEFAULT_VECTOR=i386bsd_vec
+DEFAULT_VECTOR=netbsd386_vec
 SELECT_ARCHITECTURES=bfd_i386_arch
 HDEFINES=-DTRAD_CORE
 HDEPFILES=trad-core.o
