--- a/devel/gic/Makefile
+++ b/devel/gic/Makefile
@@ -12,3 +12,11 @@ all install:
 
 clean:
 	rm -f gic
+
+pkg:	pkg_src pkg_bin
+
+pkg_src: pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S pkg/+REQ_S clean
+	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S -r pkg/+REQ_S gic_src
+
+pkg_bin: pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B pkg/+REQ_B pkg/+INST_B all
+	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B -r pkg/+REQ_B -i pkg/+INST_B gic_bin
