changed default installname to gmake instead of make and added pkg target and necessary datafiles

--- a/devel/gmake/Makefile.in
+++ b/devel/gmake/Makefile.in
@@ -81,7 +81,7 @@ prefix = /usr/gnu
 exec_prefix = $(prefix)
 
 # Name under which to install GNU make.
-instname = make
+instname = gmake
 # Directory to install `make' in.
 bindir = $(exec_prefix)/bin
 # Directory to find libraries in for `-lXXX'.
