--- a/util/tcx/Makefile
+++ b/util/tcx/Makefile
@@ -34,10 +34,10 @@ clean:
 	/bin/rm -f *.o tcx untcx
 
 install: tcx untcx
-	install -c -s -o bin -g bin -m 555 tcx /usr/gnu/bin/tcx
-	install -c -s -o root -g bin -m 4711 untcx /usr/gnu/bin/untcx
-	install -c -o bin -g bin -m 444 tcx.1 /usr/gnu/man/man1/tcx.1
-	install -c -o bin -g bin -m 444 untcx.1 /usr/gnu/man/man1/untcx.1
+	install -c -s -o bin -g bin -m 555 tcx /usr/local/bin/tcx
+	install -c -s -o root -g bin -m 4711 untcx /usr/local/bin/untcx
+	install -c -o bin -g bin -m 444 tcx.1 /usr/local/man/man1/tcx.1
+	install -c -o bin -g bin -m 444 untcx.1 /usr/local/man/man1/untcx.1
 	mkdir /var/exec
 
 
