--- a/shell/ksh.old/Makefile
+++ b/shell/ksh.old/Makefile
@@ -57,7 +57,7 @@ clean:
 cleandir:	clean
 
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src pkg_bin
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S ksh_src
