--- a/x11/xlock/Makefile
+++ b/x11/xlock/Makefile
@@ -322,7 +322,7 @@ install:: xlock
 	else (set -x; $(MKDIRHIER) $(DESTDIR)$(BINDIR)); fi
 	$(INSTALL) -c $(INSTPGMFLAGS) $(INSTUIDFLAGS) xlock $(DESTDIR)$(BINDIR)
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src pkg_bin
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S xlock_src
