added missing pkg target.

--- a/devel/gmake/Makefile.in
+++ b/devel/gmake/Makefile.in
@@ -263,6 +263,15 @@ configure: configure.in
 config.h.in: configure.in
 	autoheader $(ACFLAGS)
 
+
+pkg:	pkg_src pkg_bin
+
+pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
+	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S gmake_src
+
+pkg_bin: install pkg/+DESC_B pkg/+ONELINE_B pkg/+PLIST_B 
+	pkg_create -c pkg/+ONELINE_B -d pkg/+DESC_B -f pkg/+PLIST_B gmake_bin
+
 # This tells versions [3.59,3.63) of GNU make not to export all variables.
 .NOEXPORT:
 
