--- a/lang/perl/Makefile
+++ b/lang/perl/Makefile
@@ -1,7 +1,10 @@
 # : Makefile.SH,v 5501Revision: 1.1.1.1 5501Date: 1993/08/23 21:29:33 $
 #
 # $Log: Makefile,v $
-# Revision 1.2  1993/12/29 23:50:39  smace
+# Revision 1.3  1993/12/30 01:32:15  smace
+# correct pkg target to make src packages build first
+#
+# Revision 1.2  1993/12/29  23:50:39  smace
 # 1. added pkg target and datafiles made perl install in /usr/gnu
 # 2. removed perly.h (build during make process)
 #
@@ -340,7 +343,7 @@ shlist:
 	echo $(sh) | tr ' ' '\012' >.shlist
 
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src pkg_bin
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S perl_src
