--- a/mail/mush/Makefile
+++ b/mail/mush/Makefile
@@ -71,7 +71,7 @@ install: mush
 	chmod 0644 $(MRCDIR)/Mushrc
 
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src pkg_bin
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S 
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S mush_src
