correcected pkg target to make src packagers build first

--- a/util/tcx/Makefile
+++ b/util/tcx/Makefile
@@ -41,7 +41,7 @@ install: tcx untcx
 	mkdir /var/exec
 
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src pkg_bin
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S tcx_src
