--- a/util/top/Makefile
+++ b/util/top/Makefile
@@ -127,7 +127,7 @@ installmeta: top top.1
 		top $(BINDIR)/top-`uname -m`-`uname -r`
 	$(INSTALL) -c top.1 $(MANDIR)/top.$(MANEXT)
 
-pkg:	pkg_bin pkg_src
+pkg:	pkg_src pkg_bin
 
 pkg_src: clean pkg/+DESC_S pkg/+ONELINE_S pkg/+PLIST_S 
 	pkg_create -c pkg/+ONELINE_S -d pkg/+DESC_S -f pkg/+PLIST_S top_src
